# cga

./: .gitignore  CONTEXT.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: v1.0-execution-plan.md  v1.0-graph-schema.md  v1.0-proving-run.md  v1.0-test-plan.md  v1.1-cold-index-batching.md  v1.2-p1a-add-file-batching.md  v1.2-p1b-lookup-indexes.md  v1.2-profile.md  v1.3-watcher-investigation.md
docs/adr/: 0001-query-dialect-ir.md  0002-falkordb-runs-as-a-server.md
docs/plans/: v1.1-cold-index-batching.md
src/cga/: __init__.py  cli.py  config.py  jobs.py
src/cga/db/: __init__.py  database.py  falkor_worker.py
src/cga/engine/: __init__.py  graph_builder.py  index_coordinator.py  watcher.py
src/cga/engine/languages/: javascript.py  python.py  typescript.py  typescriptjsx.py
src/cga/mcp/: __init__.py  server.py
src/cga/query/: __init__.py  builder.py  core.py
src/cga/tools/: __init__.py  registry.py
src/cga/utils/: debug_log.py  tree_sitter_manager.py
tests/: test_cli_watch.py  test_cold_index_cgcignore.py  test_config.py  test_db.py  test_engine.py  test_index_coordinator_warm.py  test_mcp.py  test_mcp_e2e.py  test_mcp_staleness_through_coordinator.py  test_query.py  test_registry.py  test_watcher_callers_into.py  test_watcher_warm_fallback.py
tests/fixtures/sample_py/: .cgcignore  duplicate.py  helper.py  main.py  models.py
