[project]
name = "cga"
version = "0.1.0.dev0"
description = "CodeGraphAgent (CGA) — an agent-first code-graph tool. Indexes a codebase into a graph and serves it to coding agents over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "etcircle" }]
keywords = ["code-graph", "mcp", "coding-agent", "static-analysis", "tree-sitter"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dependencies = [
    "falkordb>=0.1.0",
    "falkordblite>=0.1.0; sys_platform != 'win32' and python_version >= '3.12'",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.6.0",
    "watchdog>=3.0.0",
    "pathspec>=0.12.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.5.0",
]

[project.scripts]
cga = "cga.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cga"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
